# shared_memory

./: .clang-format  CMakeLists.txt
p1/: CMakeLists.txt  main.cpp
p2/: CMakeLists.txt  main.cpp
